--- a/Neff/Other/68830_EU_04_01.html
+++ b/Neff/Other/68830_EU_04_01.html
@@ -38,7 +38,7 @@
 										{
 											"id": "image1",
                                             "caption": "graph comparing energy use",
-                                            "actualSize": {height: 599, width: 359}
+                                            "actualSize": {"height": 599, "width": 359}
 										},
                                     "configFixup":
                                         [
@@ -69,7 +69,7 @@
                                                         {"content": "2", "xyPos": [0.45, 0.90], "width": 0},
                                                         {"content": "3", "xyPos": [0.395, 0.51], "width": 0},
                                                         {"content": "4", "xyPos": [0.70, 0.65], "width": 0},
-                                                        {"content": "5", "xyPos": [0.85, .98], "width": 0}
+                                                        {"content": "5", "xyPos": [0.85, 0.98], "width": 0}
                                                     ]
                                         }
                                 },
@@ -78,7 +78,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 360, "width": 557},
+											"maxSize": {"height": 360, "width": 557}
 										},
 									"configFixup":
                                         [
