--- a/Neff/Other/68830_EU_01_01.html
+++ b/Neff/Other/68830_EU_01_01.html
@@ -38,7 +38,7 @@
 										{
 											"id": "image1",
                                             "caption": "Global energy use, 1800–2000",
-                                            "actualSize": {height: 599, width: 425}
+                                            "actualSize": {"height": 599, "width": 425}
 										},
                                     "configFixup":
                                         [
@@ -67,7 +67,7 @@
                                             "labels": [
                                                 {"content": "1", "xyPos": [0.235, 0.13], "width": 0},
                                                 {"content": "2", "xyPos": [0.43, 0.13], "width": 0},
-                                                {"content": "3", "xyPos": [0.61, 0.13], "width": 0},
+                                                {"content": "3", "xyPos": [0.61, 0.13], "width": 0}
                                                     ]
                                         }
                                 },
@@ -76,7 +76,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 445, "width": 557},
+											"maxSize": {"height": 445, "width": 557}
 										},
 									"configFixup":
                                         [
