--- a/Neff/Other/68830_EU_06_02.html
+++ b/Neff/Other/68830_EU_06_02.html
@@ -38,7 +38,7 @@
 										{
 											"id": "image1",
                                             "caption": "How an automobile internal combustion engine works",
-                                            "actualSize": {height: 330, width: 477}
+                                            "actualSize": {"height": 330, "width": 477}
 										},
                                     "configFixup":
                                         [
