--- a/Neff/Other/68830_EU_06_04.html
+++ b/Neff/Other/68830_EU_06_04.html
@@ -38,7 +38,7 @@
 										{
 											"id": "image1",
                                             "caption": "Hybrid car technology",
-                                            "actualSize": {height: 330, width: 477}
+                                            "actualSize": {"height": 330, "width": 477}
 										},
                                     "configFixup":
                                         [
