--- a/Neff/Other/68830_HP_02_02.html
+++ b/Neff/Other/68830_HP_02_02.html
@@ -38,7 +38,7 @@
 										{
 											"id": "image1",
                                             "caption": "conceptual graph showing births, deaths and the total population",
-                                            "actualSize": {height: 381, width: 477}
+                                            "actualSize": {"height": 381, "width": 477}
 										},
                                     "configFixup":
                                         [
