--- a/Manza/Other/IN_11.1.5.html
+++ b/Manza/Other/IN_11.1.5.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="be657869f38d44501b03bb93cd15faf6e"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "Image carousel showing retina, photo receptors and close up of rods and cones.",
+			"description": "Image carousel Distinguishing Racial and Ethnic Labels",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
@@ -44,7 +44,7 @@
 										{
 											"id": "img1",
 											"actualSize": { "height": 379, "width": 570 },
-											"caption":  "Native Americans, such as these Hopi Indians, are regarded as a distinct ethnic group in the United States, even though their ancestors were native to the area. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
+											"caption":  "Native Americans, such as these Hopi Indians, are regarded as a distinct ethnic group in the United States, even though their ancestors were native to the area. <br/><br/>",
 											"captionPosition": "below"
 										},
 									"configFixup":
@@ -191,7 +191,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#be657869f38d44501b03bb93cd15faf6e"
 													}
 											}
 										]
