--- a/Manza/Other/IN_11.2.2.html
+++ b/Manza/Other/IN_11.2.2.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="target1"></div>
+    <div id="bcb3d0c942a9f491086b3d248b4c4f0f4"></div>
     <script src="js/d3.v3.min.js"></script>
      
     <script src="js/brixlib-compiled.js"></script>
@@ -29,9 +29,7 @@
 
     a.config =
         {
-			"description": "A Sample Activity containing a LabelCarousel",
-            "sequenceNodeKey": "6B824262-1702-41F9-8D9E-31620F5B8787",
-            //"imgBaseUrl": "http://localhost:8088/images/",
+			"description": "Photo carousel includes 2 images depicting families where parents are dressed in more traditional ethnic clothes, and children look like American kids/teens.",
             "imgBaseUrl": "",
             "containerConfig":
                 [
@@ -46,7 +44,7 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 400, "width": 579 }
+                                            "imagesActualSize": { "height": 400, "width": 600 }
                                         },
                                     "configFixup":
                                         [
@@ -112,7 +110,6 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            //"node": d3.select("#target1"),
                                             "maxSize": { "height": 450, "width": 579 },
                                         },
                                     "configFixup":
@@ -123,7 +120,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#target1"
+                                                        "selector": "#bcb3d0c942a9f491086b3d248b4c4f0f4"
                                                     }
                                             }
                                         ]
