--- a/Manza/Other/IN_11.2.4a.html
+++ b/Manza/Other/IN_11.2.4a.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="bbf82730c109748b4b39a4280af3bbe1c"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -33,7 +33,7 @@
 			"containerConfig":
 				[
 					{
-						"description": "Container for the ImageViewer bric",
+						"description": "Photo carousel includes photos of a Norwegian person, an Italian person, a Nigerian person, an Ethiopian person, an Indian person, and a Korean person",
 						"containerId": "imgContainer",
 						"brixConfig":
 							[
@@ -43,7 +43,7 @@
 									"config":
 										{
 											"id": "img1",
-											"actualSize": { "height": 379, "width": 570 },
+											"actualSize": { "height": 400, "width": 600 },
 											"caption":  "A Norwegian woman",
 											"captionPosition": "below"
 										},
@@ -71,7 +71,7 @@
 									"config":
 										{
 											"id": "img2",
-											"actualSize": { "height": 379, "width": 570 },
+											"actualSize": { "height": 400, "width": 600 },
 											"caption":  "An Italian woman",
 											"captionPosition": "below"
 										},
@@ -99,7 +99,7 @@
 									"config":
 										{
 											"id": "img3",
-											"actualSize": { "height": 379, "width": 570 },
+											"actualSize": { "height": 400, "width": 600 },
 											"caption":  "A Nigerian woman",
 											"captionPosition": "below"
 										},
@@ -127,7 +127,7 @@
 									"config":
 										{
 											"id": "img3",
-											"actualSize": { "height": 379, "width": 570 },
+											"actualSize": { "height": 400, "width": 600 },
 											"caption":  "An Ethopian man",
 											"captionPosition": "below"
 										},
@@ -155,7 +155,7 @@
 									"config":
 										{
 											"id": "img3",
-											"actualSize": { "height": 379, "width": 570 },
+											"actualSize": { "height": 400, "width": 600 },
 											"caption":  "An Asian Indian man",
 											"captionPosition": "below"
 										},
@@ -183,8 +183,8 @@
 									"config":
 										{
 											"id": "img3",
-											"actualSize": { "height": 379, "width": 570 },
-											"caption":  "An Korean man",
+											"actualSize": { "height": 400, "width": 600 },
+											"caption":  "A Korean man",
 											"captionPosition": "below"
 										},
 									"configFixup":
@@ -249,7 +249,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#bbf82730c109748b4b39a4280af3bbe1c"
 													}
 											}
 										]
