--- a/Manza/Other/IN_11.4.6.html
+++ b/Manza/Other/IN_11.4.6.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="b1cf76059d701466fa3d7556cba879db5"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,13 +28,13 @@
 
     a.config =
 		{
-			"description": "Image carousel showing people of different nationalities",
+			"description": "Image carousel showing Patterns of Racial Separation in the United States",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
 					{
 						"description": "Container for the ImageViewer bric",
-						"containerId": "imgContainer",
+						"containerId": "b1cf76059d701466fa3d7556cba879db5",
 						"brixConfig":
 							[
 								{
@@ -43,8 +43,8 @@
 									"config":
 										{
 											"id": "img1",
-											"actualSize": { "height": 287, "width": 400 },
-											"caption":  "Census 1970 - % Black &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
+											"actualSize": { "height": 638, "width": 893 },
+											"caption":  "Census 1970 - % Black <br/><br/>",
 											"captionPosition": "below"
 										},
 									"configFixup":
@@ -162,7 +162,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#b1cf76059d701466fa3d7556cba879db5"
 													}
 											}
 										]
