--- a/Manza/Other/IN_11.4.7.html
+++ b/Manza/Other/IN_11.4.7.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="b5a9607b48c804f479141d943b16036e8"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "Image carousel showing people of different nationalities",
+			"description": "Photo/Image carousel showing images of incarcerated men, general population, and Figure 10.3 bar graph comparing incarceration rates.",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
@@ -44,7 +44,7 @@
 										{
 											"id": "img1",
 											"actualSize": { "height": 379, "width": 570 },
-											"caption":  "African American men account for 40 percent of the prison population. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
+											"caption":  "African American men account for 40 percent of the prison population. <br/><br/><br/><br/>",
 											"captionPosition": "below"
 										},
 									"configFixup":
@@ -162,7 +162,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#b5a9607b48c804f479141d943b16036e8"
 													}
 											}
 										]
